--- a/content/blog/item-analysis-0506/index.Rmd
+++ b/content/blog/item-analysis-0506/index.Rmd
@@ -12,33 +12,42 @@ image:
   filename: featured
   focal_point: Smart
   preview_only: false
+---
+
+- [Data]
+- [Scoring]
+- [Extract responses only]
+- [Item analysis]
+- [Difficulty and Discrimination]
+- [Score transformation]
 
 ---
+
 ```{r message=FALSE}
 library(CTT)
 library(psychometric)
 library(tidyverse)
 ```
 
-## data
+## Data
 ```{r}
 key <-  read_csv("107ctt_key.csv", col_names = T) 
 dat <- read_csv('107ctt_dat.csv')
 ```
 
-## scoring
+## Scoring
 ```{r}
 scr <- score(items = dat[2:34], key = key$key, output.scored=TRUE)
 scr
 ```
 
-## extract responses only
+## Extract responses only
 ```{r}
 res_mat <- as.matrix(scr$scored) 
 dimnames(res_mat) <- NULL
 ```
 
-## item analysis
+## Item analysis
 ```{r}
 res <- distractorAnalysis(items = dat[2:34], key = key$key, nGroups = 4, pTable = T, digits = 3#, csvReport="107res.csv"
                           )
@@ -50,15 +59,17 @@ res
 psychometric::item.exam(res_mat, discrim = T) %>%
   mutate(item = key$quiz_no, .before = 1)
 ```
-#Score transformation
+
+## Score transformation
 ```{r}
 # t score
 t_scr <- score.transform(scr$score, mu.new = 50, sd.new = 10, normalize = T)
 t_scr
 ```
 
-#cttICC(score = scr$score, itemVector = scr$scored[,26], colTheme="spartans", cex=1.5)
+
 ```{r}
+#cttICC(score = scr$score, itemVector = scr$scored[,26], colTheme="spartans", cex=1.5)
 CTT::reliability(as.matrix(scr$scored))
 ```
 
