--- a/content/blog/2020-12-01-r-rmarkdown/index.Rmd
+++ b/content/blog/2020-12-01-r-rmarkdown/index.Rmd
@@ -1,9 +1,12 @@
 ---
 title: "Hello R Markdown"
 author: "Frida Gomam"
-date: 2020-12-01T21:13:14-05:00
-categories: ["R"]
-tags: ["R Markdown", "plot", "regression"]
+date: '2020-12-01T21:13:14-05:00'
+categories: R
+tags:
+- R Markdown
+- plot
+- regression
 ---
 
 ```{r setup, include=FALSE}
@@ -35,3 +38,5 @@ pie(
   init.angle = -50, border = NA
 )
 ```
+
+![](index_files/figure-html/pie-1.png)
