--- a/content/blog/2020-12-01-r-rmarkdown/index.Rmd
+++ b/content/blog/2020-12-01-r-rmarkdown/index.Rmd
@@ -29,7 +29,7 @@ fit
 
 You can also embed plots. See Figure \@ref(fig:pie) for example:
 
-```{r pie, fig.cap='A fancy pie chart.', tidy=FALSE}
+```{r pie, echo=TRUE, fig.cap='A fancy pie chart.', tidy=FALSE}
 par(mar = c(0, 1, 0, 1))
 pie(
   c(280, 60, 20),
@@ -39,4 +39,3 @@ pie(
 )
 ```
 
-![](./pie-1.png)
