--- a/content/post/2020-12-01-r-rmarkdown/index.Rmd
+++ b/content/post/2020-12-01-r-rmarkdown/index.Rmd
@@ -38,3 +38,9 @@ pie(
   init.angle = -50, border = NA
 )
 ```
+
+| Col1 | Col2 | Col3 |
+|------|------|------|
+| wt   | 452  | 46   |
+| we   | 235  | 346  |
+| et   | 235  | 36   |
