--- a/content/post/stm0410/index.Rmd
+++ b/content/post/stm0410/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'STM: Structural topic modeling (a trail)'
+title: 'Structural topic modeling: a trail'
 author: "Jiewen Tsai"
 date: '2021-04-10'
 tags:
