--- a/content/work/2017-06-14-essays.md
+++ b/content/work/2017-06-14-essays.md
@@ -12,10 +12,10 @@ title: Seneca's essays
 
 Traditionally given in the following order:
 
-1. _De Providentia_ (_On providence_) - addressed to Lucilius
-1. _De Constantia Sapientis_ (_On the Firmness of the Wise Person_) - addressed to Serenus
-1. _De Ira_ (_On anger_) – A study on the consequences and the control of anger - addressed to his brother Novatus
-1. _Ad Marciam, De consolatione_ (_To Marcia, On Consolation_) – Consoles her on the death of her son
-1. _De Vita Beata_ (_On the Happy Life_) - addressed to Gallio
+1.  *De Providentia* (*On providence*) - addressed to Lucilius
+2.  *De Constantia Sapientis* (*On the Firmness of the Wise Person*) - addressed to Serenus
+3.  *De Ira* (*On anger*) -- A study on the consequences and the control of anger - addressed to his brother Novatus
+4.  *Ad Marciam, De consolatione* (*To Marcia, On Consolation*) -- Consoles her on the death of her son
+5.  *De Vita Beata* (*On the Happy Life*) - addressed to Gallio
 
 ...
