--- a/content/post/2021-07-02-/index.Rmd
+++ b/content/post/2021-07-02-/index.Rmd
@@ -27,21 +27,22 @@ tags: []
 
 我心目中研究領域還是有 data analytics 跟 data science/engineering 之分的。教育研究的 data analytics 的關心重點在業務，模型只是一種做研究的工具，能力上大約做到可以跑模型、解釋資料（大部分量化研究人員都能做到這邊）。然後其實教育研究領域的模型都不會太難（頂多到多變、multi-level, SEM的程度），也幾乎都有現成套裝工具可以跑，所以其實業務理解可能更重要。
 
-但是教育研究的 data science or engineering 的關心重點就是在模型本身。所以我心目中他除了跑（一般/進階）模型之外，至少要有幾種能力：
+但是教育研究的 data science or engineering 的關心重點就是在模型（方法）本身。所以我心目中他除了跑（一般/進階）模型之外，至少要有幾種能力：
 
 - 調整/比較模型、
 - 做數據實驗（模擬研究）、
 - 發展新的方法、整合數種方法
 
-以下是我關注的書單：
+### Book list：
 
 - Pfaff, T. (2019). R for College Mathematics and Statistics. CRC.
+- Will H. Moore, David A. Siegel. (). A Mathematics Course for Political and Social Research.
 - Rizzo, M. L. (2019). Statistical Computing with R, 2/e. CRC Press.
 - James Patrick Howard. (). Computational Methods for Numerical Analysis with R.
-- Paul Gerrard, Radia M. Johnson. Mastering Scientific Computing with R 
-- Sheldon Ross. Simulation, 5/e
-- Christian Robert, George Casella (auth.) Introducing Monte Carlo Methods with R
-- Simon N. Wood. Core Statistics
+- Paul Gerrard, Radia M. Johnson. (). Mastering Scientific Computing with R 
+- Sheldon Ross. (). Simulation, 5/e
+- Christian Robert, George Casella (auth.) (). Introducing Monte Carlo Methods with R
+- Simon N. Wood. (). Core Statistics
 
 
 關於
@@ -50,7 +51,24 @@ tags: []
 ## 測量篇
 
 
+根據 Klaas Sijtsma, L. Andries van der Ark. (2020). 的書，有大概幾種類型：
+
+- CTT and FA
+- <mark> Non-parameter IRT </mark>
+- Parameter IRT
+- LCA and CDM
+- Other Models: Pairwise Comparison, Proximity, Response Time, and Network Models
+
+### Book list：
+
+- Klaas Sijtsma, L. Andries van der Ark. (2020). Measurement Models for Psychological Attributes.
+
+
 ## 分析篇
+
+- 調查資料分析 
+- 長期追蹤資料分析
+- 廣義線性模型（解釋型 IRT, SEM, ...）
 
 
 ## 程式篇
