--- a/content/post/2021-07-03-r-4-1-0-new-features/index.Rmd
+++ b/content/post/2021-07-03-r-4-1-0-new-features/index.Rmd
@@ -1,10 +1,9 @@
 ---
-title: 'R 4.1.0 new features'
-author: 'JW Tsai'
+title: "R 4.1.0 new features"
+author: "JW Tsai"
 date: '2021-07-03'
-slug: 'r-4-1-0-new-features'
-categories:
-  - R
+slug: r-4-1-0-new-features
+categories: R
 tags: []
 ---
 
