--- a/content/_index.Rmd
+++ b/content/_index.Rmd
@@ -2,10 +2,10 @@
 title: "Home"
 ---
 
-[<img src="favicon.ico" style="max-width:15%;min-width:40px;float:right;" alt="Github repo" />](https://github.com/yihui/hugo-xmin)
+[<img src="favicon.ico" style="max-width:15%;min-width:40px;float:right;" alt="Github repo" />](/)
 
 # JW-LEARN
-## _A learning journal by JW Tsai,</br>Focus on Ed/Psy Measurement._
+## _A Learning Journal by JW Tsai,</br>Focus on Ed/Psy Measurement._
 
 **XMin** is a Hugo theme written by [Yihui Xie](https://yihui.org) in about four hours: half an hour was spent on the Hugo templates, and 3.5 hours were spent on styling. The main motivation for writing this theme was to provide a really minimal example to beginners of Hugo templates. This XMin theme contains about 130 lines of code in total, including the code in HTML templates and CSS (also counting empty lines).
 
