--- a/content/_index.Rmd
+++ b/content/_index.Rmd
@@ -5,20 +5,41 @@ title: "Home"
 [<img src="favicon.ico" style="max-width:15%;min-width:40px;float:right;" alt="Github repo" />](/)
 
 # JW-LEARN
-## _A Learning Journal by JW Tsai,</br>Focus on Ed/Psy Measurement._
+### _A Learning Journal by JW Tsai,</br>Focus on Ed/Psy Measurement._
 
-**XMin** is a Hugo theme written by [Yihui Xie](https://yihui.org) in about four hours: half an hour was spent on the Hugo templates, and 3.5 hours were spent on styling. The main motivation for writing this theme was to provide a really minimal example to beginners of Hugo templates. This XMin theme contains about 130 lines of code in total, including the code in HTML templates and CSS (also counting empty lines).
+---
 
-```{bash, comment='', echo=3, eval=Sys.which('bash') != '', message=FALSE}
-cd ../..;
-if [ ! -f 'theme.toml' ]; then exit 0; fi  # only run find below within the theme example site
-find . -not -path '*/exampleSite/*' \( -name '*.html' -o -name '*.css' \) | xargs wc -l
-```
+## 為什麼要寫這個筆記？
 
-I can certainly further reduce the code, for example, by eliminating the CSS, but I believe a tiny bit of CSS can greatly improve readability. You cannot really find many CSS frameworks that only contain 50 lines of code.
+**JW-LEARN** 簡單來講是一個寫學習筆記的計畫。目前的規劃是盡量日更，每天只要紀錄一點點就行。例如：
 
-Although it is a minimal theme, it is actually fully functional. It supports pages (including the home page), blog posts, a navigation menu, categories, tags, and RSS. With [a little bit customization](https://github.com/yihui/hugo-xmin/blob/master/exampleSite/layouts/partials/foot_custom.html), it can easily support LaTeX math expressions, e.g.,
+- 某本書提到的幾個知識點、
+- 某一個 R 套件的幾種寫法、
+- 或一天測試一種模型寫法、
+- 或整理一個最近在關注的書單、
+- 講解一個模型的數學基礎、
+- 或整理書上或文章上的理論或流程。
 
-$${\sqrt {n}}\left(\left({\frac {1}{n}}\sum _{i=1}^{n}X_{i}\right)-\mu \right)\ {\xrightarrow {d}}\ N\left(0,\sigma ^{2}\right)$$
+這些都很值得我整理起來，一方面也跟大家分享。
 
-All pages not under the root directory of the website are listed below. You can also visit the list page of a single section, e.g., [posts](/post/), or [notes](/note/). See the [About](/about/) page for the usage of this theme.
+在台灣的教育或心理學領域裡面，真正算得上是測驗統計或心理計量領域的研究者本來就已經不多。而這些學者裡面真正關注在「當代測量模型」的人可以說是非常稀有（我把 SEM 相關的那些都排除掉了，寫 SEM 的人倒是滿多的）。根據 Sijtsma 和 van der Ark (2020) 在 _Measurement models for psychological attributes_ 書中定義的，就聚焦在：
+
+- 非參數IRT、
+- IRT、
+- LCA 與 CDM、以及
+- 其他新興模型（Pairwise Comparison, Proximity, Response Time, and Network Models, etc.）。
+
+而這些少數的人，又多半已經是教授、研究員、學者專家等級的人物。也就是說在測統這塊領域，<mark>新手跟頂級高手的 level 相差非常遠，而中間循序漸進的過度鷹架（中文內容）幾乎沒有，完全只能靠英語文獻</mark>。很簡單可以證明，你可以在博客來上面找看看，有幾本中文的教科書專門再介紹上面講的那些模型，除了 IRT 跟 LCA 有幾本以外，其他幾乎沒有。
+
+## TA 是誰？
+
+所以我們這些初級學生得要重新爬過文獻。因此，我的第一個超級用戶就是<mark>未來的我自己</mark>，這些筆記是寫給未來的我看的，他除了學習之外也方便把這些片段的紀錄系統整理起來。
+
+另一方面我也希望能把這個足跡留下來，給有興趣學習測驗統計/心理計量這塊領域的高中生/大學生/研究生們參考。畢竟在中文世界裡面，當代測量理論的確有一大塊從入門到精通的知識內容缺口。
+
+
+## 預計會包含哪些內容？
+
+（這部分有待規劃）
+
+
