--- a/content/note/2021-07-03-r-4-1-0-new-features/index.Rmd
+++ b/content/note/2021-07-03-r-4-1-0-new-features/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "R 4.1.0 new features"
-#author: "JW Tsai"
+author: "JW Tsai"
 date: '2021-07-03'
 slug: r-4-1-0-new-features
 categories: R
