--- a/content/_index.Rmd
+++ b/content/_index.Rmd
@@ -5,7 +5,7 @@ title: "Home"
 [<img src="favicon.ico" style="max-width:15%;min-width:40px;float:right;" alt="Github repo" />](/)
 
 # JW-LEARN
-### _A Learning Journal by JW Tsai,</br>Focus on Ed/Psy Measurement._
+### _Hello, Welcome to JW-LEARN.</br> This blog is a learning journal that focuses on knowledge related to educational measurement and psychometrics._
 
 ---
 
